Checkboxes and radios now have `flex-shrink: 0` to avoid distortion when placed in a flex layout

--- a/scss/bitstyles/base/input-checkbox/_index.scss
+++ b/scss/bitstyles/base/input-checkbox/_index.scss
@@ -6,6 +6,7 @@
 [type='checkbox'] {
   display: inline-block;
   position: relative;
+  flex-shrink: 0;
   width: 1em;
   height: 1em;
   margin-right: settings.$gap;
